fixed alignment on nav

--- a/life-gpa/src/components/component-styles/dashboard.css
+++ b/life-gpa/src/components/component-styles/dashboard.css
@@ -2,6 +2,8 @@ nav {
     display:flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
 } 
 
 nav button {
